--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
-  font-family: "Roboto", serif;
-  color: #2e2f42;
+  font-family: "Roboto", sans-serif;
+  color: #434455;
   background-color: #ffffff;
 }
 ul {
@@ -12,16 +12,17 @@ a {
 }
 
 .logo {
-  font-family: "Raleway", serif;
-  color: #2e2f42;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  color: #4d5ae5;
   background-color: #ffffff;
   text-transform: uppercase;
   font-size: 18px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 }
 .weblogo {
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 
 .page-nav .link {
