--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@ a {
 .page-nav .link:hover {
   color: #404bbf;
 }
+
+.page-nav .link:focus {
+  color: #404bbf;
+}
 .page-nav .link:active {
   color: #404bbf;
   text-decoration: underline;
@@ -49,6 +53,7 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
   background-color: #ffffff;
+  font-style: normal;
 }
 .page-adress .link-adress:hover {
   color: #404bbf;
@@ -82,6 +87,10 @@ a {
   background: #404bbf;
 }
 
+.page-button:focus {
+  background: #404bbf;
+}
+
 .section-advant {
   background-color: #ffffff;
 }
@@ -90,6 +99,7 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .section-advant .advant-text {
@@ -107,10 +117,12 @@ a {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
+  color: #2e2f42;
 }
 
 .team-box {
-  background: #fff;
+  background-color: #ffffff;
 }
 
 .team .name-team {
