--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ a {
   text-decoration: none;
 }
 
-.logo {
+.page-nav .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   color: #4d5ae5;
