update html and css

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,6 +150,7 @@ a {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 
 .portfolio .portfolio-text {
@@ -162,11 +163,13 @@ a {
   background: #2e2f42;
 }
 .logo-footer {
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #4d5ae5;
   background: #2e2f42;
 }
 .studiologo {
