--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,9 @@ a {
   color: #404bbf;
   text-decoration: underline;
 }
-
+.page-adress {
+  font-style: normal;
+}
 .page-adress .link-adress {
   font-weight: 400;
   font-size: 16px;
@@ -53,7 +55,6 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
   background-color: #ffffff;
-  font-style: normal;
 }
 .page-adress .link-adress:hover {
   color: #404bbf;
